alert box styled; gallery copied to all subpages; navbar scroll-reveal on mobile devices fixed

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -675,12 +675,14 @@ footer {
 	align-items: center;
 	top: 100px;
 	left: 50%;
-	width: 200px;
-	height: 50px;
+	width: 300px;
+	height: 80px;
 	transform: translateX(-50%);
-	background-color: #666;
-	color: c.$white;
+	background-color: c.$white;
+	color: c.$black;
+	font-size: 1.5rem;
 	border-radius: 5px;
+	box-shadow: 0px 9px 15px -6px rgb(115, 115, 124);
 	z-index: 20;
 }
 
